tests/smt2/error/unbound_sort.smt2
(declare-fun f () S1)